# exercism

./: .editorconfig  .gitignore  README.md  babel.config.js  lefthook.yml  notes.md  notes.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rimraf.sh  webpack.config.js
.lefthook/pre-push/: readme.sh
arm64-assembly/: README.md
awk/: README.md
bash/: README.md
c/: README.md  learnc.c
common-lisp/: README.md
cpp/: README.md  learncpp.cpp
csharp/: README.md
database/: completion_cache_2025-05-22.json  completion_cache_2025-05-23.json  completion_cache_2025-05-24.json  completion_cache_2025-05-25.json  last_touched.json  track_log.csv  track_stats.json  tracks.csv  tracks.json  tracks.txt
elixir/: README.md
go/: README.md  learngo.go
javascript/: README.md  learnjavascript.js
jq/: README.md
julia/: README.md  learnjulia.jl
misc/: bitcoin_track_selector.txt  constants_backup.txt  enhanced_track_log.txt  enhanced_track_system.txt  migration_guide.txt  track_log_backup.csv  track_log_backup.txt  track_log_backup_temp.txt
perl5/: README.md
python/: README.md
python-exercises/: README.md
ruby/: README.md
rust/: .rustfmt.toml  README.md  clippy.toml  learnrust.rs
rust-exercises/: .editorconfig
scripts/: cleanup.sh  constants.py  last_touched.sh  rename.sh  rimraf.sh  track_log.py  track_stats.py  track_sync.py
sqlite/: README.md
src/: .gitignore  index.html  index.js
tools/readmes/: .editorconfig  .rustfmt.toml  Cargo.toml
tools/readmes/src/: args.rs  formatter.rs  lib.rs  main.rs  model.rs  readme.rs  scanner.rs
tools/readmes/templates/: main_readme.hbs  track_readme.hbs
tools/update_readme/: .editorconfig  Cargo.toml
tools/update_readme/src/: args.rs  lib.rs  main.rs  metadata.rs  model.rs  readme.rs  scanner.rs
typescript/: README.md  learntypescript.ts
wasm/: README.md  learnwasm.wat
x86-64-assembly/: README.md
(+658 files in other folders)
