[package]
    name    = "readmes"
    version = "0.3.1"
    authors = ["Prince Muel <vansomecsam@gmail.com>"]
    edition = "2024"

[lib]
    path = "src/lib.rs"

[[bin]]
    path = "src/main.rs"
    name = "readmes"

[dependencies]
    handlebars = "6"
    serde      = { version = "1", features = ["derive"] }
    serde_json = "1"
    time       = { version = "0.3", features = ["formatting"] }

[profile.release]
    opt-level     = 3
    codegen-units = 1
    panic         = "abort"
    debug         = 0         # No debug info in release build
    strip         = "symbols" # Automatically strip symbols after build
