[package]
  authors = ["Prince Muel <vansomecsam@gmail.com>"]
  edition = "2024"
  name = "readmes"
  version = "0.3.2"

[lib]
  path = "src/lib.rs"

[[bin]]
  name = "readmes"
  path = "src/main.rs"

[dependencies]
  handlebars = "6"
  serde = { version = "1", features = ["derive"] }
  serde_json = "1"

[profile.release]
  codegen-units = 1
  debug = 0         # No debug info in release build
  opt-level = 3
  panic = "abort"
  strip = "symbols" # Automatically strip symbols after build
